# nimbleparse_lsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
neovim/: README.md  nimbleparse.lua
server/: Cargo.toml
server/src/: main.rs  parse_thread.rs  peek_channel.rs
tests/badproject/: nimbleparse.toml
tests/badproject/src/: ar.y  conflicts.y  multi_error_lex.l  multi_error_lex.y  multi_error_yacc.l  multi_error_yacc.y  rr.y  sr.l  sr.y  unused_token.l  unused_token.y  unused_tokens.l  whitespace.l
tests/badproject/tests/pass/: foo.foo
tests/goodproject/: nimbleparse.toml
tests/goodproject/src/: eco.y  generictree.y  grmtools.y  lexer.l  noactions.y  useractions.y
tests/goodproject/tests/fail/: invalid_ident.noactions  invalid_ident.useractions
tests/goodproject/tests/pass/: x.grmtools
toml/: Cargo.toml
toml/src/: lib.rs
vscode/: .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
