[workspace]
members = [
  "server",
  "toml",
  "xtask",
]

[patch.crates-io]
lrpar = { git = "https://github.com/softdevteam/grmtools"}
lrlex = { git = "https://github.com/softdevteam/grmtools"}
cfgrammar = { git = "https://github.com/softdevteam/grmtools"}
lrtable = { git = "https://github.com/softdevteam/grmtools"}
