[package]
name = "nimbleparse_lsp"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.15"
thiserror = "1.0.30"
tokio = {version = "1.17.0", features=["fs", "macros", "rt-multi-thread", "io-std", "process"]}
tower-lsp = "0.16.0"
nimbleparse_toml = {path = "../toml"}
toml = {version = "0.5.8", features=["preserve_order"]}
serde = "1.0.137"
serde-transcode = "1.1.1"
serde_json = { version = "1.0.79", features=["preserve_order"]}
cfgrammar = "0.12.0"
lrpar = "0.12.0"
lrlex = "0.12.0"
lrtable = "0.12.0"
num-traits = "0.2.14"
tokio-stream = "0.1.8"
ropey = "1.4.1"
railroad = "0.1.1"
glob = "0.3.0"
ron = "0.7.0"

[dependencies.console-subscriber]
version = "0.1.4"
optional = true

[features]
default = []
console = ["console-subscriber"]
