[package]
name = "nimbleparse_toml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cfgrammar = {git = "https://github.com/softdevteam/grmtools", features=["serde"]}
cfgrammar = {path = "../../grmtools/cfgrammar", features=["serde"]}
lrpar = {path = "../../grmtools/lrpar"}
serde = {version="1.0.136", features=["derive"]}
serde_json = {version="1.0.79", features=["preserve_order"]}
toml = {version="0.5.8", features=["preserve_order"]}
